--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whatsgpt",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,5 +19,12 @@
     "qrcode-terminal": "^0.12.0",
     "user": "^0.0.0",
     "whatsapp-web.js": "^1.19.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^9.1.2",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
   }
 }
