Add new version that builds

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["./node_modules", "./rollup.config.js"],
+  "exclude": ["./node_modules", "rollup.config.sj"],
   "types": ["node"]
 }
