--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "peerDependencies": {
     "openai": "^3.2.1",
     "whatsapp-web.js": "^1.19.5",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "dotenv": "^16.0.3"
   },
   "dependencies": {
     "@types/qrcode-terminal": "^0.12.0",
-    "dotenv": "^16.0.3",
     "user": "^0.0.0"
   },
   "devDependencies": {
