--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whatsgpt",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Whatsapp gpt bot",
   "main": "index.js",
   "homepage": "https://www.npmjs.com/package/whatsgpt",
@@ -35,15 +35,13 @@
   "type": "module",
   "author": "Josep Servat",
   "license": "ISC",
-  "peerDependencies": {
-    "openai": "^3.2.1",
-    "whatsapp-web.js": "^1.19.5",
-    "qrcode-terminal": "^0.12.0",
-    "dotenv": "^16.0.3"
-  },
   "dependencies": {
     "@types/qrcode-terminal": "^0.12.0",
-    "user": "^0.0.0"
+    "dotenv": "^16.0.3",
+    "openai": "^3.2.1",
+    "qrcode-terminal": "^0.12.0",
+    "user": "^0.0.0",
+    "whatsapp-web.js": "^1.19.5"
   },
   "devDependencies": {
     "rimraf": "^5.0.0",
